// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Handle work socket callback If the worker fails, the API emits a work-response with error 1`] = `
Array [
  "WorkResponse-someuuid-asd-asd-asdddasa",
  Object {
    "request": Object {
      "Authorization": "Bearer some-token",
      "experimentId": "experi-mentid-11111111-1111111-11111",
      "uuid": "someuuid-asd-asd-asdddasa",
    },
    "response": Object {
      "cacheable": false,
      "error": "fail",
      "trace": undefined,
    },
    "results": Array [],
  },
]
`;

exports[`Handle work socket callback If the worker fails, the API emits a work-response with error 2`] = `
Array [
  Object {
    "Authorization": "Bearer some-token",
    "experimentId": "experi-mentid-11111111-1111111-11111",
    "uuid": "someuuid-asd-asd-asdddasa",
  },
]
`;

exports[`Handle work socket callback data without authorization also throws an error 1`] = `
Array [
  "WorkResponse-someuuid-asd-asd-asdddasa",
  Object {
    "request": Object {
      "experimentId": "experi-mentid-11111111-1111111-11111",
      "uuid": "someuuid-asd-asd-asdddasa",
    },
    "response": Object {
      "cacheable": false,
      "error": "Authentication token must be present.",
      "trace": undefined,
    },
    "results": Array [],
  },
]
`;

exports[`Handle work socket callback submits work 1`] = `
Array [
  "WorkerInfo-experi-mentid-11111111-1111111-11111",
  Object {
    "response": Object {
      "podInfo": undefined,
      "trace": undefined,
    },
  },
]
`;

exports[`Handle work socket callback submits work 2`] = `
Array [
  Object {
    "Authorization": "Bearer some-token",
    "experimentId": "experi-mentid-11111111-1111111-11111",
    "uuid": "someuuid-asd-asd-asdddasa",
  },
]
`;
